<resources>
    <string name="app_name">test3</string>
    <string name="record">Record</string>
    <string name="enter_tag_here">Enter tag here</string>
    <string name="received_data_n">Received Data:\n</string>
    <string name="show_stored_data">Show Stored Data</string>
    <string name="stored_values">Stored Values</string>
    <string name="clear_stored_data">clear stored data</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="record_button">Record</string>
    <string name="select_model">select new model</string>
    <string name="edit_activities">Edit Activities</string>
    <string name="edit_button_tags">Edit Button Tags</string>
    <string name="button_1_tag">Walking</string>
    <string name="button_2_tag">Writing</string>
    <string name="button_3_tag">Sitting</string>
    <string name="button_4_tag">Waving</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="progress_50">Progress: 50</string>
    <string name="amount_to_detect_30">Amount to detect : 30</string>
    <string name="stress_list">Stress List</string>
    <string name="clear_stress_count">clear stress count</string>
    <string name="train_model_online">train model online</string>
    <string name="export_data">Export data</string>

</resources>