<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- CustomGraphView for displaying graph -->
    <com.example.test3.CustomGraphView
        android:id="@+id/customGraphView"
        android:layout_width="290dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/accelerometerView" />

    <!-- Custom Accelerometer View - circle changing colors -->
    <com.example.test3.AccelerometerView
        android:id="@+id/accelerometerView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!--    &lt;!&ndash; New Button for selecting .tflite model &ndash;&gt;-->
<!--    <Button-->
<!--        android:id="@+id/buttonSelectModel"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:padding="8dp"-->
<!--        android:text="@string/select_model"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/accelerometerView" tools:ignore="VisualLintButtonSize" />-->

    <!-- EditText for entering tags -->
<!--    <EditText-->
<!--        android:id="@+id/editTextTag"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="60dp"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:autofillHints="waving"-->
<!--        android:hint="@string/enter_tag_here"-->
<!--        android:inputType="text"-->
<!--        android:padding="8dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.5"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/buttonSelectModel"-->
<!--        tools:ignore="VisualLintTextFieldSize" />-->

<!--    &lt;!&ndash; Button for starting/stopping recording &ndash;&gt;-->
<!--    <Button-->
<!--        android:id="@+id/buttonRecord"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:padding="8dp"-->
<!--        android:text="@string/record"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.5"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/editTextTag"-->
<!--        tools:ignore="VisualLintButtonSize" />-->


    <!-- TextView for displaying "edit buttons" label -->

    <!-- GridLayout for activity buttons -->
    <TextView
        android:id="@+id/textViewEditButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/edit_button_tags"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/accelerometerView" />

    <GridLayout
        android:id="@+id/gridLayoutActions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:columnCount="2"
        android:rowCount="2"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewEditButtons">

        <!-- Button 1: Walking -->
        <Button
            android:id="@+id/buttonWalking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light_blue"
            android:layout_margin="8dp"
            android:text="@string/button_1_tag" />

        <!-- Button 2: Sitting -->
        <Button
            android:id="@+id/buttonSitting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light_blue"
            android:layout_margin="8dp"
            android:text="@string/button_2_tag" />

        <!-- Button 3: Writing -->
        <Button
            android:id="@+id/buttonWriting"
            android:layout_width="wrap_content"
            android:backgroundTint="@color/light_blue"
            android:layout_margin="8dp"
            android:text="@string/button_3_tag" />

        <!-- Button 4: Waving -->
        <Button
            android:id="@+id/buttonWaving"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light_blue"
            android:layout_margin="8dp"
            android:text="@string/button_4_tag" />

    </GridLayout>
    <!-- Button to show stored data -->
    <Button
        android:id="@+id/buttonShowStoredData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:text="@string/show_stored_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gridLayoutActions"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/buttonClearStoredData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:text="@string/clear_stored_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonShowStoredData"
        tools:ignore="VisualLintButtonSize" />

    <!-- TextView for displaying stored data title -->
    <TextView
        android:id="@+id/textViewStoredDataTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/stored_values"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonClearStoredData" />

    <!-- ScrollView and TextView for displaying stored data -->
    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="386dp"
        android:layout_height="98dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewStoredDataTitle"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="NestedScrolling">

        <TextView
            android:id="@+id/textViewStoredData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="" />
    </ScrollView>

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scrollView2"
        tools:ignore="NestedScrolling">

        <TextView
            android:id="@+id/textViewData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/received_data_n"
            android:textSize="16sp" />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>